Fix list marker alignment

--- a/src/renderer/styles/editor-source.css
+++ b/src/renderer/styles/editor-source.css
@@ -22,6 +22,11 @@
   color: inherit;
 }
 
+.document-editor .cm-line {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .document-editor .cm-content {
   width: 100%;
   min-height: 100%;
